# transactify

./: Cargo.toml  README.md
fixtures/: invalid_sequence.csv  small_correct.csv
src/: constants.rs  lib.rs  main.rs  models.rs  state.rs  util.rs
src/models/: balance.rs  transaction.rs
tests/: fixtures_load.rs  invalid_cases.rs  invalid_not_fails.rs
