[package]
name = "transactify"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Ivan Temchenko <github.com/35359595>"]

[dependencies]
anyhow = "1.0.82"
bigdecimal = { version = "0.4.3", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
